--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 </head>
 
 <body>
+  <div class="controls">
+    <small>Playing The Symphony No. 5 of Ludwig van Beethoven | </small><small>✋: slow | 🤚: fast </small>
+  </div>
+ 
   <div id="btn" class="set">
     <audio id="myAudio" controls>
       <source src="sounds/Beethoven-Symphony5-1.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio><br/>
-    <small>Playing The Symphony No. 5 of Ludwig van Beethoven | </small><small>✋: slow | 🤚: fast </small>
+   
   </div>
+  
 
 <script src="index.js" charset="utf-8"></script>
 
